--- a/public/style.css
+++ b/public/style.css
@@ -35,10 +35,55 @@ main,
   gap: 40px;
 }
 
+.link-box {
+  background-color: rgba(204, 205, 208, 0.58);
+  justify-content: end;
+}
+
+.link-copy-area {
+  width: 100%;
+  border-radius: 10px 0 0px 10px;
+  color: rgba(0, 0, 0, 0.24);
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+.link-copy-area:hover {
+  overflow-x: scroll;
+}
+
+/* width */
+.link-copy-area::-webkit-scrollbar {
+  width: 1px;
+  height: 5px;
+  background: #aaaaaa21;
+  border-radius: 10px 0 0 0;
+}
+
+/* Container scroll attribute */
+/* Track */
+.link-copy-area::-webkit-scrollbar-track {
+  background-color: rgba(222, 218, 218, 0.598);
+  border-radius: 5px;
+}
+
+/* Handle */
+.link-copy-area::-webkit-scrollbar-thumb {
+  background: black;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.link-copy-area::-webkit-scrollbar-thumb:hover {
+  background: gray;
+}
+
 .link-box,
 .mail-input-box {
   width: 50%;
-  min-width: max-content;
   height: 37px;
   border-radius: 10px;
 }
@@ -71,6 +116,12 @@ main,
   justify-content: center;
   min-width: max-content;
   width: 48px;
+}
+
+.link-copy-icon-cnt {
+  transition-property: all;
+  transition-duration: 1s;
+  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 
 .link-copy-icon-cnt:hover {
