--- a/public/style.css
+++ b/public/style.css
@@ -46,7 +46,7 @@ main,
   color: rgba(0, 0, 0, 0.24);
   display: flex;
   align-items: center;
-  padding: 5px;
+  padding: 0 0 0 3px;
   overflow-x: hidden;
   overflow-y: hidden;
 }
